<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/on_boarding_bg"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/language_layout"
        android:gravity="center_horizontal">


        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_language"
            app:tint="@color/white"
            android:id="@+id/icon"
            android:padding="@dimen/_30sdp"
            android:layout_height="@dimen/_140sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gotoNext_GenderSelect"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_gravity="bottom"
            app:cardElevation="@dimen/_5sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/next"
                android:layout_margin="@dimen/_12sdp"
                android:textColor="@color/appColor"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/genderLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_gender"
            android:textColor="@color/white"
            android:id="@+id/title1"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/inter_bold" />

        <LinearLayout
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/title1">

            <androidx.cardview.widget.CardView
                android:id="@+id/male"
                android:layout_margin="@dimen/_20sdp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_100sdp">

                <ImageView
                    android:id="@+id/maleIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_male"
                    app:tint="@color/appColor"
                    android:padding="@dimen/_20sdp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardElevation="@dimen/_5sdp"
                android:id="@+id/female"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_100sdp">

                <ImageView
                    android:id="@+id/femaleIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_female"
                    app:tint="@color/appColor"
                    android:padding="@dimen/_20sdp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_age"
            android:textColor="@color/white"
            android:id="@+id/title3"
            android:layout_below="@id/gender"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="@dimen/_20sdp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_50sdp"
            app:cardElevation="@dimen/_10sdp"
            android:layout_below="@id/title3"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerHorizontal="true">
            <EditText
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:id="@+id/agePicker"
                android:hint="20"
                android:gravity="center"
                android:inputType="number"
                android:backgroundTint="@color/white"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/startNow"
            app:cardCornerRadius="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_gravity="bottom"
            app:cardElevation="@dimen/_5sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/start"
                android:layout_margin="@dimen/_12sdp"
                android:textColor="@color/appColor"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>