<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/trackDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_9sdp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:translationZ="@dimen/_2sdp"
                android:background="@drawable/card_bg">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_steps"
                        app:tint="@color/appColor" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/steps_notification"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:translationZ="@dimen/_2sdp"
                android:background="@drawable/card_bg">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_track"
                        app:tint="@color/appColor" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/distance_large"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:translationZ="@dimen/_2sdp"
                android:background="@drawable/card_bg">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_calories"
                        app:tint="@color/appColor" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/calories_large"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kcal"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:translationZ="@dimen/_2sdp"
                android:background="@drawable/card_bg">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_timer"
                        app:tint="@color/appColor" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0h 50m"
                android:id="@+id/time_large"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                style="@style/NotificationTextColor"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>