<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/appColor">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/reports"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?selectableItemBackground"
            android:paddingVertical="@dimen/_12sdp"
            android:src="@drawable/ic_reports"
            app:tint="@color/white" />
    </RelativeLayout>

    <!-- Steps Card -->
    <RelativeLayout
        android:id="@+id/steps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center_horizontal"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/step_lottie" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/steps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22sdp" />

                    <TextView
                        android:id="@+id/stepText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/steps"
                        android:textColor="@color/appColor"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <!-- Buttons: play, stop, reset -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical">

                    <!-- Play -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/play"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        app:cardCornerRadius="@dimen/_50sdp"
                        app:cardElevation="@dimen/_4sdp"
                        app:cardBackgroundColor="@color/white">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_play"
                                app:tint="@color/appColor" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Stop -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/stop"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:visibility="gone"
                        app:cardCornerRadius="@dimen/_50sdp"
                        app:cardElevation="@dimen/_4sdp"
                        app:cardBackgroundColor="@color/white">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_pause"
                                app:tint="@color/appColor" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Reset -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/reset"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:cardCornerRadius="@dimen/_50sdp"
                        app:cardElevation="@dimen/_4sdp"
                        app:cardBackgroundColor="@color/white">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_reset"
                                app:tint="@color/appColor" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <!-- Runner Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView2"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_below="@id/steps_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_80sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/home_lottie" />

    <!-- Bottom Stats -->
    <LinearLayout
        android:id="@+id/trackDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Distance -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="0.00"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/kmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/meters"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <!-- Calories -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/KcalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/Cal"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <!-- Time -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/Time"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
